--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -18,3 +18,12 @@ layout: default
 </header>
 
 {{ content }}
+
+
+
+{% if site.theme_config.show_footer == true %}
+  <footer>
+    <div class="dashed"></div>
+    {% include horizontal_list.html collection=site.data.home.footer_entries %}
+  </footer>
+{% endif %}
